add controls.js for adding class, add placetype variable for search and change order of js scripts

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="hotels">Hotels</button></div>
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="restaurants">Restaurants</button></div>
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="bars">Bars</button></div>
-            <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="clearMap">Clear Map</button></div>
+            <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="atm">ATMs</button></div>
         </div>
         <div class="row" id="mapFunctions">
-            <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="atm">ATM's</button></div>
+            <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="art_gallery">Art Gallery</button></div>
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="museum">Museums</button></div>
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="movie_theater">Cinemas</button></div>
             <div class="col-6 col-md-3"><button type="button" class="btn btn-info" id="zoo">Zoos</button></div>
@@ -34,10 +34,10 @@
 
 
 
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="static/js/controls.js"></script>
     <script type="text/javascript" src="static/js/maps.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDzC_qy_vt0xkWJNtqQjY41VTFjxiXu7k&libraries=places&callback=initMap" async defer></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
