change to infobox and overall styling/colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-10 offset-1" id="map"></div>
+            <div class="col-10 offset-1" id="map">
+                <div id="overlay">Please select a place type</div>
+            </div>
         </div>
         <div class="row">
             <div class="col-10 col-md-5 offset-1 btn-group dropup">
@@ -53,12 +55,13 @@
         </div>
     </div>
     <div id="infoWrapper">
-        <div id="placeInfo" class="text-center">
+        <div id="placeInfo">
             <p id="placeHeading"></p>
+            <hr/>
             <p id="placeAddress"></p>
             <p id="placePhone"></p>
             <p id="placeWebsite"></p>
-            <p>Rating: <span id="placeRating"></span>/5</p>
+            <p>Rating: <span id="placeRating"></span></p>
         </div>
     </div>
 
